// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DevTools component > should open by clicking the floating button 1`] = `
<body>
  <div
    class="ProseMirror"
    contenteditable="true"
    id="pm-editor"
    translate="no"
  >
    <p>
      <br
        class="ProseMirror-trailingBreak"
      />
    </p>
  </div>
  <div>
    <section
      class="dev-tools s-DevTools-j5gmur"
    >
      <div
        class="floating-dock-wrapper s-FloatingDock-1quf800"
      >
        <div
          class="paste-modal s-PasteModal-19h7j7n hidden"
        >
          <div
            class="modal-bg s-PasteModal-19h7j7n"
          />
           
          <form
            class="paste-content s-PasteModal-19h7j7n"
          >
            <fieldset
              class="s-PasteModal-19h7j7n"
            >
              <div
                class="submit-container s-PasteModal-19h7j7n"
              >
                <button
                  class="s-PasteModal-19h7j7n"
                >
                  Submit
                </button>
              </div>
               
              <legend
                class="s-PasteModal-19h7j7n"
              >
                Doc
              </legend>
               
              <textarea
                class="s-PasteModal-19h7j7n"
              />
            </fieldset>
          </form>
        </div>
        <!---->
         
        <div
          class="floating-dock s-FloatingDock-1quf800"
          style="top: 50%; height: 50%;"
        >
          <div
            class="resizing-div s-FloatingDock-1quf800"
            role="button"
            tabindex="-1"
          />
           
          <div
            class="floating-dock-body s-FloatingDock-1quf800"
          >
            <div>
              <button
                class="copy-btn s-FloatingDock-1quf800"
              >
                Copy
              </button>
               
              <button
                class="save-btn s-FloatingDock-1quf800"
              >
                Save
              </button>
               
              <button
                class="import-btn s-FloatingDock-1quf800"
              >
                Import
              </button>
               
              <button
                class="paste-btn s-FloatingDock-1quf800"
              >
                Paste
              </button>
               
              <button
                aria-label="Close dev-toolkit"
                class="close-btn s-FloatingDock-1quf800"
              >
                X
              </button>
            </div>
             
            <input
              accept=".json"
              multiple=""
              style="display:none"
              type="file"
            />
             
            <ul
              class="tabs-menu s-TabsMenu-10notzq"
            >
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  STATE
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  HISTORY
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  PLUGINS
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  SCHEMA
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  STRUCTURE
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq active"
                >
                  SNAPSHOTS
                </button>
              </li>
            </ul>
            <!---->
             
            <section
              class="split-view s-SplitView-fdudio"
            >
              <!---->
               
              <div
                class="right-panel s-SnapshotsTab-3jdj5c"
                slot="right"
              >
                <div
                  class="no-snapshots s-SnapshotsTab-3jdj5c"
                >
                  Save snapshots by clicking "Save" button.
                </div>
                <!---->
              </div>
              <!---->
            </section>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </section>
    
    
  </div>
</body>
`;

exports[`DevTools component > should render 1`] = `
<body>
  <div
    class="ProseMirror"
    contenteditable="true"
    id="pm-editor"
    translate="no"
  >
    <p>
      <br
        class="ProseMirror-trailingBreak"
      />
    </p>
  </div>
  <div>
    <section
      class="dev-tools s-DevTools-j5gmur"
    >
      <div
        class="floating-dock-wrapper s-FloatingDock-1quf800"
      >
        <div
          class="paste-modal s-PasteModal-19h7j7n hidden"
        >
          <div
            class="modal-bg s-PasteModal-19h7j7n"
          />
           
          <form
            class="paste-content s-PasteModal-19h7j7n"
          >
            <fieldset
              class="s-PasteModal-19h7j7n"
            >
              <div
                class="submit-container s-PasteModal-19h7j7n"
              >
                <button
                  class="s-PasteModal-19h7j7n"
                >
                  Submit
                </button>
              </div>
               
              <legend
                class="s-PasteModal-19h7j7n"
              >
                Doc
              </legend>
               
              <textarea
                class="s-PasteModal-19h7j7n"
              />
            </fieldset>
          </form>
        </div>
        <!---->
         
        <div
          class="floating-dock s-FloatingDock-1quf800"
          style="top: 50%; height: 50%;"
        >
          <div
            class="resizing-div s-FloatingDock-1quf800"
            role="button"
            tabindex="-1"
          />
           
          <div
            class="floating-dock-body s-FloatingDock-1quf800"
          >
            <div>
              <button
                class="copy-btn s-FloatingDock-1quf800"
              >
                Copy
              </button>
               
              <button
                class="save-btn s-FloatingDock-1quf800"
              >
                Save
              </button>
               
              <button
                class="import-btn s-FloatingDock-1quf800"
              >
                Import
              </button>
               
              <button
                class="paste-btn s-FloatingDock-1quf800"
              >
                Paste
              </button>
               
              <button
                aria-label="Close dev-toolkit"
                class="close-btn s-FloatingDock-1quf800"
              >
                X
              </button>
            </div>
             
            <input
              accept=".json"
              multiple=""
              style="display:none"
              type="file"
            />
             
            <ul
              class="tabs-menu s-TabsMenu-10notzq"
            >
              <li>
                <button
                  class="s-TabsMenu-10notzq active"
                >
                  STATE
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  HISTORY
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  PLUGINS
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  SCHEMA
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  STRUCTURE
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-10notzq"
                >
                  SNAPSHOTS
                </button>
              </li>
            </ul>
            <!---->
             
            <section
              class="split-view s-SplitView-fdudio"
            >
              <div
                class="left-panel s-StateTab-8c7oqn"
                slot="left"
              >
                <div
                  class="top-row s-StateTab-8c7oqn"
                >
                  <h2>
                    Current doc
                  </h2>
                   
                  <button
                    class="s-Button-it3v6s"
                  >
                    log
                    <!---->
                  </button>
                  <!---->
                </div>
                 
                <ul
                  class="tree-view svelte-tree-view s-TreeView-167awo5"
                >
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[0]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      type:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="string"
                      role="presentation"
                    >
                      "doc"
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <button
                        class="log-copy-button s-TreeViewNode-ngcjq5"
                      >
                        log
                      </button>
                      <!---->
                       
                      <button
                        class="log-copy-button s-TreeViewNode-ngcjq5"
                      >
                        copy
                      </button>
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5 collapsed"
                    data-tree-id="[1]"
                  >
                    <button
                      class="arrow-btn collapsed s-TreeViewNode-ngcjq5"
                    >
                      ▶
                    </button>
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 has-children"
                      role="presentation"
                    >
                      content:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5 has-children"
                      data-type="array"
                      role="presentation"
                    >
                       [] 1 items
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <button
                        class="log-copy-button s-TreeViewNode-ngcjq5"
                      >
                        log
                      </button>
                      <!---->
                       
                      <button
                        class="log-copy-button s-TreeViewNode-ngcjq5"
                      >
                        copy
                      </button>
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  
                </ul>
                <!---->
              </div>
              <!---->
               
              <div
                class="right-panel s-StateTab-8c7oqn"
                slot="right"
              >
                <div
                  class="top-row s-StateTab-8c7oqn"
                >
                  <h2>
                    Selection
                  </h2>
                   
                  <button
                    class="selection-btn s-Button-it3v6s"
                  >
                    <span
                      class="caret-icon s-StateTab-8c7oqn"
                    />
                    <!---->
                  </button>
                  <!---->
                </div>
                 
                <ul
                  class="tree-view svelte-tree-view s-TreeView-167awo5"
                >
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[0]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      jsonID:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="string"
                      role="presentation"
                    >
                      "text"
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[1]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      empty:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="boolean"
                      role="presentation"
                    >
                      true
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[2]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      anchor:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="number"
                      role="presentation"
                    >
                      1
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[3]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      from:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="number"
                      role="presentation"
                    >
                      1
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[4]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      head:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="number"
                      role="presentation"
                    >
                      1
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[5]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      to:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="number"
                      role="presentation"
                    >
                      1
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  
                </ul>
                <!---->
                 
                <div>
                  <h2>
                    Active marks
                  </h2>
                   
                  <div
                    class="no-marks s-StateTab-8c7oqn"
                  >
                    No active marks
                  </div>
                  <!---->
                </div>
                 
                <div>
                  <h2>
                    Document stats
                  </h2>
                   
                  <ul
                    class="tree-view svelte-tree-view s-TreeView-167awo5"
                  >
                    <li
                      class="row s-TreeViewNode-ngcjq5"
                      data-tree-id="[0]"
                    >
                      <!---->
                       
                      <div
                        class="node-key s-TreeViewNode-ngcjq5 p-left"
                        role="presentation"
                      >
                        nodeSize:
                      </div>
                       
                      <div
                        class="node-value s-TreeViewNode-ngcjq5"
                        data-type="number"
                        role="presentation"
                      >
                        4
                        <!---->
                      </div>
                       
                      <div
                        class="buttons s-TreeViewNode-ngcjq5"
                      >
                        <!---->
                         
                        <!---->
                      </div>
                    </li>
                     
                    <!---->
                    <li
                      class="row s-TreeViewNode-ngcjq5"
                      data-tree-id="[1]"
                    >
                      <!---->
                       
                      <div
                        class="node-key s-TreeViewNode-ngcjq5 p-left"
                        role="presentation"
                      >
                        childCount:
                      </div>
                       
                      <div
                        class="node-value s-TreeViewNode-ngcjq5"
                        data-type="number"
                        role="presentation"
                      >
                        1
                        <!---->
                      </div>
                       
                      <div
                        class="buttons s-TreeViewNode-ngcjq5"
                      >
                        <!---->
                         
                        <!---->
                      </div>
                    </li>
                     
                    <!---->
                    
                  </ul>
                  <!---->
                </div>
              </div>
              <!---->
            </section>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </section>
    
    
  </div>
</body>
`;
